Bug #11363
libsldap: fix memory leaks and use calloc and asprintf
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Split from 11173; factor out change to plug memory leaks and use calloc and asprintf. Since cstyle cleanups are messy enough, this should help to validate 11173.
The problems are found by Gergő Doma <domag02@gmail.com>
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0ababfc653d766f93331d0c0f0aeae5f8945e0ff
commit 0ababfc653d766f93331d0c0f0aeae5f8945e0ff Author: Toomas Soome <tsoome@me.com> Date: 2019-07-10T14:33:47.000Z 11363 libsldap: fix memory leaks and use calloc and asprintf Reviewed by: Jason King <jason.king@joyent.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Robert Mustacchi <rm@joyent.com>