11363 libsldap: fix memory leaks and use calloc and asprintf

Reviewed by: Jason King <jason.king@joyent.com>
Reviewed by: Andrew Stormont <andyjstormont@gmail.com>
Approved by: Robert Mustacchi <rm@joyent.com>